scss/base.scss
$govuk-assets-path: "/static/assets/";
$moj-assets-path: "/static/assets/";
$app-images-path: "/static/assets/images";

// Removes need to put classes on all elements
$govuk-global-styles: true;

$govuk-new-typography-scale: true;

@import "node_modules/govuk-frontend/dist/govuk/index";
@import "node_modules/@ministryofjustice/frontend/moj/all";
@import "./components/search";
@import "./components/masthead";
@import "./glossary";
@import "./details";
@import "./components/table";
@import "./components/cards";
@import "./components/card-grid";
@import "./components/metadata-list";

.js-required {
  display: none;
}

mark {
  background-color: inherit;
  color: inherit;
  @include govuk-typography-weight-bold($important: false);
}

.extra-skip-link:active,
.extra-skip-link:focus {
  margin-bottom: govuk-spacing(3) !important;
}

.column-description {
  @include govuk-media-query($from: desktop) {
    max-width: calc($govuk-page-width / 2);
    overflow-wrap: break-word;
  }
}

.wide-table {
  table-layout: fixed;
  width: 100%;
  overflow-wrap: break-word;
}

code {
  font-family: monaco, Consolas, "Lucida Console", monospace;
  @include govuk-font-size($size: 16); /* Slightly smaller font size */
  background-color: govuk-colour("light-grey");
  border: 1px solid #ddd;
  border-radius: 2px; /* Rounded corners */
  padding: 1px 3px; /* Padding around the text */
  color: govuk-colour("black");
}

.main-wrapper-with-masthead {
  @extend .govuk-main-wrapper;
  padding-top: govuk-spacing(0);
}

// we've reduced the minimum here as the default value was higher
// than the minumum of the moj filter component
.moj-filter .govuk-select {
  min-width: 5.5em;
}

// We've increased the max width of this tag as it was wrapping
// the text for "Publication collection"
.govuk-tag {
  max-width: 180px
}

